force-app/main/default/objects/Analise_de_Mercado__c/Analise_de_Mercado__c.object-meta.xml
<CustomObject>
    <label>Análise de Mercado</label>
    <nameField>
        <displayFormat>AM {00000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análises de Mercado</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>