force-app/main/default/objects/Analise_de_Mercado__c/fields/Concorrente__c.field-meta.xml
<CustomField>
    <fullName>Concorrente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concorrente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Análises de Mercado</relationshipLabel>
    <relationshipName>Analises_de_Mercado</relationshipName>
    <type>Lookup</type>
</CustomField>