force-app/main/default/objects/Analise_de_Mercado__c/fields/Modelo_ofertado__c.field-meta.xml
<CustomField>
    <fullName>Modelo_ofertado__c</fullName>
    <label>Modelo ofertado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>