force-app/main/default/objects/Analise_de_Mercado__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PREÇO</fullName>
            </value>
            <value>
                <fullName>PRODUTO</fullName>
            </value>
            <value>
                <fullName>ACOMPANHAMENTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>