force-app/main/default/objects/Analise_de_Mercado__c/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <label>Observações</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>