force-app/main/default/objects/Analise_de_Mercado__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Análises de Mercado</relationshipLabel>
    <relationshipName>Analises_de_Mercado</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>