force-app/main/default/objects/Analise_de_Mercado__c/fields/Preco_unitario__c.field-meta.xml
<CustomField>
    <fullName>Preco_unitario__c</fullName>
    <label>Valor unitário</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>