force-app/main/default/objects/Analise_de_Mercado__c/fields/Produto_da_oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Produto_da_oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto da oportunidade</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Análises de Mercado</relationshipLabel>
    <relationshipName>An_lises_de_Mercado</relationshipName>
    <type>Lookup</type>
</CustomField>