force-app/main/default/objects/Analise_de_Mercado__c/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <label>Situação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GANHANDO</fullName>
            </value>
            <value>
                <fullName>PERDENDO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>